--- a/ethnode/webui/src/templates/header-global.html
+++ b/ethnode/webui/src/templates/header-global.html
@@ -12,7 +12,7 @@
 					<!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
 					<li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
 					<li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
-					<li class="nav-item"><a href="" open-modal="#add-gig" class="nav-link open-modal">New Gig</a></li>
+					<li class="nav-item"><a href="" data-toggle="modal" data-target="#add-gig" class="nav-link">New Gig</a></li>
 					<li id="settings-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="profile view-profile">
 						<img id="avatar-img" src="" alt="" class="profile-picture">
 						<i class="ti-angle-down font-size-14 mrg-left-5"></i>
