--- a/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
+++ b/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
@@ -1,30 +1,97 @@
 .add-gig-redesigned {
-  .cropper-wrap {
-    width: 600px;
-    height: 200px;
-    margin: 0 auto;
-    margin-bottom: 40px;
-  }
+	.card-heading {
+		display: flex;
+		align-items: center;
+		padding: 0 20px;
+    position: relative;
+		margin: 0;
+		height: 60px;
+		font-size: 26px;
+		font-weight: 700;
+		font-family: 'Roboto', sans-serif;
+		text-transform: uppercase;
+	}
+	.form-group {
+		padding: 0 !important; 
+	}
+	.form-group [type=file] {
+		position: absolute;
+		filter: alpha(opacity=0);
+		opacity: 0;
+		&+label {
+			border: 4px dashed #CCC;
+			text-align: left;
+			padding: 210px 0 0 0;
+			width: 440px;
+			height: 215px;
+			font-weight: 300;
+			position: relative;
+			text-align: center;
+			background: #f5f6fa;
+			color: #91969c;
+			cursor: pointer;
+			&.active {
+				background: transparent;
+			}
+			&:hover,
+			&:focus,
+			&:active {
+				background: #dde4ff;
+				color: #8b8f94;
+			}
+		}
+	}
+	.cropper-wrap {
+		width: 600px;
+		height: 200px;
+		margin: 0 auto;
+		margin-bottom: 40px;
+	}
 
-  .modal-body .form-group {
-    max-width: 600px !important;
+	.modal-body .form-group {
+		max-width: 600px !important;
 
-    .img-label {
-      border: 2px dashed #CCC !important;
-      background-color: #f1f6ff !important;
-      background-repeat: no-repeat !important;
-      background-position: center !important;
-      transition: all 0.3s ease;
-      &:hover {
-        background-color: #dae7ff !important;
-      }
-    }
+		.img-label {
+			border: 2px dashed #CCC !important;
+			background-color: #f1f6ff !important;
+			background-repeat: no-repeat !important;
+			background-position: center !important;
+			transition: all 0.3s ease;
+			&:hover {
+				background-color: #dae7ff !important;
+			}
+		}
 
-    img#input-image-gig {
-      max-width: none;
-      max-height: none;
-      position: static;
-      border: 3px solid #ebebeb;
-    }
-  }
+		img#input-image-gig {
+			max-width: none;
+			max-height: none;
+			position: static;
+			border: 3px solid #ebebeb;
+		}
+	}
+	.ui.selection.dropdown {
+		box-shadow: none;
+		&.active {
+			border-color: #3daef3 !important;
+		}
+		&:hover {
+			box-shadow: none;
+		}
+	}
+	.gig-tags {
+		&.ui.selection.dropdown {
+			height: 42px;
+			border-radius: 2px;
+			border-color: #e6ecf5;
+			&:hover {
+				border-color: #e6ecf5;
+			}
+			&.active {
+				border-color: #3daef3;
+			}
+		}
+	}
+	.btn {
+		line-height: 1;
+	}
 }
