--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -17,25 +17,10 @@
 @import 'common/header'; //                  header
 @import 'common/footer'; //                  footer
 @import 'common/page-container'; //          page-container
-@import 'common/widgets'; //                 widgets
 @import 'common/rtl'; //                     rtl
 @import 'common/themes'; //                  themes
 @import 'common/theme-configurator'; //      theme-configurator
 
-/*---------------------------------
------------- plugins -------------
----------------------------------*/
-
-@import 'plugins/slick'; //
-@import 'plugins/nouislider'; //
-@import 'plugins/selectize'; //
-@import 'plugins/noty'; //
-@import 'plugins/datatables'; //
-@import 'plugins/datepicker'; //
-@import 'plugins/summernote'; //
-@import 'plugins/nvd3'; //
-@import 'plugins/rickshaw'; //
-@import 'plugins/sparkline'; //
 
 /*---------------------------------
 ------------ elements -------------
@@ -62,20 +47,11 @@
 @import 'elements/authentication'; //        authentication
 @import 'elements/icons'; //                 icons
 @import 'elements/user-card'; //             user-card
-@import 'elements/profile-page.scss'; //     profile-page.scss
-
-/*---------------------------------
--------------- apps ---------------
----------------------------------*/
-
-@import 'apps/calendar'; //                  calendar
-@import 'apps/email'; //                     email
-@import 'apps/social'; //                    social
-@import 'apps/gallery'; //                   gallery
 
 /*---------------------------------
 -------------- custom-components ---------------
 ---------------------------------*/
 
+@import 'elements/profile-page.scss';
 @import 'custom-components/redesigned-gig-modal';
 @import 'custom-components/add-gig-redesigned';
