update my profile page ( bug fixed on page init) , loading speed increased

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -14,7 +14,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: linear-gradient(to right, rgba(146, 168, 209, 0.9411764705882353) 30%, rgba(146, 168, 209, 0.49019607843137253) 100%);
+        background: linear-gradient(to right, rgba(89, 116, 165, 0.91) 30%, rgba(146, 168, 209, 0.32) 100%);
         opacity: 0.9;
     }
     .user-info-wrap {
