--- a/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
+++ b/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
@@ -1,4 +1,4 @@
-.add-gig-redesigned {
+.add-gig-redesigned, .edit-profile-redesigned {
 	.modal-dialog {
 		max-width: 800px;
 	}
@@ -122,6 +122,7 @@ input::-moz-focus-outer {
 
 .flex {
 	display: flex;
+	justify-content: space-between;
 }
 
 
@@ -186,6 +187,8 @@ input::-moz-focus-outer {
 	}
 
 	.form-group {
+		margin: 0 !important;
+		margin-bottom: 20px !important;
     padding: 0 !important;
     width: 100%;
 		.img-label {
