changed classes for img cropper in editProfile modal

--- a/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
+++ b/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
@@ -202,7 +202,7 @@ input::-moz-focus-outer {
 			}
 		}
 
-		img#input-image-gig {
+		img#input-image-gig,img#input-image-profile {
 			margin-bottom: 20px;
 			width: 100%;
 			max-width: none;
