profiles limit 9 + load more (in progress)

--- a/ethnode/webui/src/scss/common/_page-container.scss
+++ b/ethnode/webui/src/scss/common/_page-container.scss
@@ -73,3 +73,10 @@
 		}	
 	}
 } 
+
+.profiles-container {
+	display: flex;
+    align-items: flex-start;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+}
