Update: - edit modal ( + notification service for updated) - cleaning of code - profiles changes in progress

--- a/ethnode/webui/src/scss/common/_helpers.scss
+++ b/ethnode/webui/src/scss/common/_helpers.scss
@@ -2838,6 +2838,13 @@
     align-items: center;
 }
 
+.flex-box-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 
 /* Position */
 
