--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -1413,15 +1413,16 @@
          display: none;
     }
      .modal-box-content .inner-modal .content .modal-body .form-group img.show-image {
-         position: absolute;
-         width: auto;
-         max-width: 440px;
-         height: auto;
-         max-height: 155px;
-         left: 0;
-         right: 0;
-         margin: 0 auto;
-         z-index: 100;
+        border-radius: 50%;
+        width: 300px;
+        height: 300px;
+        max-height: 150px;
+        max-width: 150px;
+        float: left;
+        position: relative;
+        margin-left: 0;
+        margin-right: 50px;
+        margin-bottom: 10px;
     }
      .modal-box-content .inner-modal .content .modal-body .form-group img#input-image-avatar {
          width: 200px;
