global update for profiles page + edit profile modal + lock in add gig modal

--- a/ethnode/webui/src/templates/edit-profile.html
+++ b/ethnode/webui/src/templates/edit-profile.html
@@ -45,7 +45,7 @@
 							</div>
 							<div class="flex">
 								<div class="form-group">
-									<label>Add categories (limit: 10)</label>
+									<label>Add skills (limit: 10)</label>
 									<select name="categories" multiple="" id="categories-edit" class="ui fluid dropdown normal search skills-dropdown">
 									</select>
 								</div>
