--- a/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
+++ b/ethnode/webui/src/scss/custom-components/add-gig-redesigned.scss
@@ -317,5 +317,16 @@
         margin-left: 0;
         margin-right: 50px;
         margin-bottom: 10px;
+  }
+  span.show-image-gig {
+        width: 300px;
+        height: 300px;
+        max-height: 150px;
+        max-width: 150px;
+        float: left;
+        position: relative;
+        margin-left: 0;
+        margin-right: 50px;
+        margin-bottom: 10px;
 	}
 }
