--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -47,6 +47,7 @@
 @import 'elements/authentication'; //        authentication
 @import 'elements/icons'; //                 icons
 @import 'elements/user-card'; //             user-card
+@import 'common/mobile'; //                  mobile
 
 /*---------------------------------
 -------------- custom-components ---------------
