--- a/ethnode/webui/src/scss/custom-components/redesigned-gig-modal.scss
+++ b/ethnode/webui/src/scss/custom-components/redesigned-gig-modal.scss
@@ -13,6 +13,8 @@
           opacity: 0.8;
           color: white !important;
           text-shadow: 0 1px 0 #000;
+          font-size: 23px;
+          line-height: 27px;
           &:hover {
             opacity: 1;
           }
