--- a/ethnode/webui/src/templates/header-global.html
+++ b/ethnode/webui/src/templates/header-global.html
@@ -5,10 +5,10 @@
 				<div class="button">
 					<button type="button" data-toggle="collapse" data-target="#navigation" aria-expanded="false" class="navbar-toggle collapsed"></button>
 				</div>
-				<a href="/ui" class=" hidden-xs"><img src="images/logo.png" alt="Ethearnal Logo"></a>
+				<a href="/ui" class=""><img src="images/logo.png" alt="Ethearnal Logo"></a>
 			</div>
 			<div id="navigation" class="collapse navbar-collapse tab-info">
-				<ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
+				<ul class="nav nav-tabs navbar-right relative dropdown">
 					<!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
 					<li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
 					<li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
