--- a/ethnode/webui/src/templates/header-global.html
+++ b/ethnode/webui/src/templates/header-global.html
@@ -9,8 +9,7 @@
 			</div>
 			<div id="navigation" class="collapse navbar-collapse tab-info">
 				<ul class="nav nav-tabs navbar-right hidden-xs relative dropdown">
-					<!-- <li><a href="" open-modal="#edit-profile" class="nav-link open-modal">Test</a></li> -->
-					<li class="nav-item"><a href="/ui/network" class="nav-link network">Network</a></li>
+					<!-- <li class="nav-item"><a href="/ui/network" class="nav-link network">Network</a></li> -->
 					<li class="nav-item"><a href="/ui" class="nav-link gigs">Gigs</a></li>
 					<li class="nav-item"><a href="/ui/profiles" class="nav-link profiles">Profiles</a></li>
 					<li class="nav-item"><a href="" data-toggle="modal" data-target="#add-gig" class="nav-link">New Gig</a></li>
