--- a/ethnode/webui/src/scss/common/_mobile.scss
+++ b/ethnode/webui/src/scss/common/_mobile.scss
@@ -35,7 +35,7 @@
     }
     .gigs-container {
         min-width: auto;
-        justify-content: space-around !important;
+        // justify-content: space-around !important;
     }
     .slider-wrapper {
         width: 70%;
@@ -135,6 +135,10 @@
                     padding: 0px !important;
                     font-size: 16px !important;
                 }
+            }
+            &.mdl-menu {
+                flex-direction: column;
+                padding: 0px;
             }
         }
     }
