--- a/ethnode/webui/src/templates/add-gig-modal.html
+++ b/ethnode/webui/src/templates/add-gig-modal.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="modal-footer">
                     <button id="addNewGigSend" class="btn btn-pink lh-normal mdl-button mdl-js-button finish-button">Publish</button>
-                    <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button" data-dismiss="modal">Close</button>
+                    <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button" id="addgig-close" data-dismiss="modal">Close</button>
                     <div data-mdl-for="addNewGig" class="mdl-tooltip">This text will be changed anyway.</div>
                 </div>
             </div>
