every 5 minute refreshing, tooltips, modal(select)

--- a/ethnode/webui/src/scss/elements/_buttons.scss
+++ b/ethnode/webui/src/scss/elements/_buttons.scss
@@ -633,6 +633,10 @@ button {
     padding-bottom: 12px;
 }
 
+.btn-half {
+  width: 50%;
+}
+
 .btn-group {
     .btn {
         padding: 10px 14px;
