--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -55,3 +55,4 @@
 @import 'elements/profile-page.scss';
 @import 'custom-components/redesigned-gig-modal';
 @import 'custom-components/add-gig-redesigned';
+@import 'custom-components/map-tooltip';
