--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -208,6 +208,16 @@
         }
     }
 }
+.cdn-details {
+    h3 {
+        margin-bottom: 5px;
+        margin-top: 0px;
+    }
+    .btn-primary {
+        background-color: #d0e1ff;
+        border-color: #d0e1ff;
+    }
+}
 
 .btn-pink {
     background-color: #f7cac9;
