--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -192,30 +192,24 @@
     }
 }
 
-.about-head-modal {
-    img {
-        margin-bottom: 0px;
-    }
+.cdn-details {
     h3 {
         margin-bottom: 5px;
         margin-top: 0px;
     }
-    .btn {
+    .btn-primary {
         background-color: #d0e1ff;
         border-color: #d0e1ff;
-        span {
-            color: #92a8d1;
+    }
+    .btn-pink {
+        background-color: #f7cac9;
+        border-color: #f7cac9;
+        color: #fff;
+        &:hover {
+            background-color: #fddcdb;
+            border-color: #f7cac9;
+            color: #fff;
         }
     }
 }
 
-.btn-pink {
-    background-color: #f7cac9;
-    border-color: #f7cac9;
-    color: #fff;
-    &:hover {
-        background-color: #fddcdb;
-        border-color: #f7cac9;
-        color: #fff;
-    }
-}
