update for network tab after merge

--- a/ethnode/webui/src/scss/elements/_buttons.scss
+++ b/ethnode/webui/src/scss/elements/_buttons.scss
@@ -520,6 +520,10 @@ button {
     }
 }
 
+.btn-half {
+    width: 50%;
+}
+
 .btn-html5 {
     background-color: $html5;
     color: $default-white;
