--- a/ethnode/webui/src/templates/edit-profile.html
+++ b/ethnode/webui/src/templates/edit-profile.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="modal-footer">
 					<button id="updateProfile" class="btn btn-pink finish-button">Publish</button>
-					<button class="close-button btn btn-default" data-dismiss="modal">Close</button>
+					<button class="close-button btn btn-default"  id="edit-profile-close" data-dismiss="modal">Close</button>
 					<div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
 				</div>
 			</div>
