--- a/ethnode/webui/src/templates/redesigned-big-gig-modal.html
+++ b/ethnode/webui/src/templates/redesigned-big-gig-modal.html
@@ -43,7 +43,7 @@
 </div>
 
 <div id="redesigned-modal" class="hidden">
-  <div class="modal-content border-radius-6 redesigned-gig-modal">
+  <div class="modal-content border-radius-6 redesigned-gig-modal scroll-y">
     <div class="modal-header pdd-horizon-30" id="redesigned-modal-gig-image" style="height: 200px;">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     </div>
