--- a/ethnode/webui/src/scss/elements/_modal.scss
+++ b/ethnode/webui/src/scss/elements/_modal.scss
@@ -217,3 +217,11 @@
     display: -ms-flex;
     display: flex;
 }
+
+.icon-box {
+    img {
+        width: 35px;
+        margin-right: 15px;
+    }
+    margin-top: 10px;
+}
