--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -197,6 +197,7 @@
         margin-bottom: 5px;
         margin-top: 0px;
     }
+    p { margin: 0; }
     .btn-primary {
         background-color: #d0e1ff;
         border-color: #d0e1ff;
@@ -213,4 +214,3 @@
         color: #fff;
     }
 }
-
